--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ a {
 }
 
 .top-wrapper {
-  padding: 180px 0 100px 0;
+  padding: 100px 0 100px 0;
   background-image: url("background_header.jpg");
   background-size: cover;
   color: white;
@@ -33,8 +33,8 @@ a {
 .top-wrapper h1 {
   opacity: 0.7;
   font-size: 45px;
-  letter-spacing: 5px;
-  margin-bottom: 10px;
+  letter-spacing: 15px;
+  margin-bottom: 40px;
 }
 
 .top-wrapper p {
@@ -44,7 +44,7 @@ a {
 
 .btn-wrapper {
   text-align: center;
-  margin: 20px 0;
+  margin: 50px 0;
 }
 
 .btn-wrapper p {
@@ -85,7 +85,7 @@ a {
 header {
   height: 65px;
   width: 100%;
-  background-color: rgba(34, 49, 52, 0.9);
+  background-color: rgba(34, 49, 52);
   position :fixed;
   top: 0;
   z-index: 10;
@@ -100,7 +100,50 @@ header {
   float: left;
 }
 
-.header-right {
+/* Remove margins and padding from the list, and add a black background color */
+ul.topnav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    float: right;
+}
+
+/* Float the list items side by side */
+ul.topnav li {
+  float: left;
+
+}
+
+.topnav li a{
+  margin-right: 10px;
+  
+}
+
+/* Style the links inside the list items */
+ul.topnav li a {
+    display: inline-block;
+    color: #f2f2f2;
+    text-align: center;
+
+    line-height: 35px;
+    
+    padding: 14px 16px;
+    text-decoration: none;
+    transition: 0.3s;
+    font-size: 20px;
+    background-color: rgba(34, 49, 52);
+}
+
+/* Change background color of links on hover */
+ul.topnav li.icon2 a:hover {
+  background-color: rgba(255, 255, 255);
+  color: rgba(34, 49, 52);
+}
+
+/* Hide the list item that contains the link that should open and close the topnav on small screens */
+ul.topnav li.icon {display: none;}
+/*.header-right {
   float: right;
   margin-right: -25px;
 }
@@ -118,31 +161,31 @@ header {
   background-color: rgba(255, 255, 255, 0.3);
 }
 
+.menu-icon {
+  display: none;
+}
 
-/* Tambahkan CSS untuk menu-icon */
+
 .menu-icon {
   color: white;
   float: right;
   font-size: 25px;
   padding: 21px 0;
-  /* Gantikan property display ke none */
   display: none;
-}
+}*/
 
-.fa .fa-bars, .menu-icon {
-  display: none;
-}
 
 .lesson-wrapper {
-  padding-bottom: 80px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   padding-left: 5%;
   padding-right: 5%;
   background-color: #e6ede8;
   text-align: center;
 }
 
-.heading {
-  padding-top: 80px;
+.lesson-wrapper .heading {
+  /*padding-top: 50px;*/
   padding-bottom: 50px;
   color: #5f5d60;
 }
@@ -185,16 +228,23 @@ header {
 
 .message-wrapper {
   border-bottom: 1px solid #eee;
-  padding-bottom: 80px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   text-align: center;
 }
 
-.message {
+.message-wrapper .heading h1 {
+  /*padding-top: 50px;*/
+  padding-bottom: 50px;
+  color: #5f5d60;
+}
+
+/*.message {
   padding: 15px 40px;
   background-color: #5dca88;
   cursor: pointer;
   box-shadow: 0 7px #1a7940;
-}
+}*/
 
 .message:active {
   position: relative;
