--- a/responsive.css
+++ b/responsive.css
@@ -15,9 +15,13 @@
 }
 
 /* Untuk Smartphone */
-@media all and (max-width: 670px) {
+@media all and (max-width: 680px) {
   .lesson {
     width: 100%;
+  }
+
+  .lesson-wrapper {
+    text-align: center;
   }
   
   footer {
@@ -36,25 +40,59 @@
     text-align: center;
   }
   
-  /* Tambahkan CSS untuk header-right */
-  .header-right {
+  /* Saat lebar layar kurang dari 680 pixel, sembunyikan semua menu item kecuali item yang pertama yaitu("Home"). Tampilkan juga list item yang berisi link untuk membuka menu yaitu (li.icon) */
+  ul.topnav li/*:not(:first-child)*/ {display: none;}
+  ul.topnav li.icon {
+    float: right;
+    display: inline-block;
+  }
+}
+
+/* Class dengan nama "responsive" akan ditambahkan oleh JavaScript saat user mengklik icon. Munculnya Class ini akan mendisplay isi list menu 
+*/
+  @media all and (max-width:680px) {
+  ul.topnav.responsive {
+    position: relative;
+  }
+
+  /*ul.topnav.responsive li.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }*/
+
+  ul.topnav.responsive li {
+    float: none;
+    display: inline;
+  }
+
+  ul.topnav.responsive li a {
+    display: block;
+    text-align: right;
+  }
+
+ 
+
+}
+/*  .header-right {
     display: none;
   }
   .menu-icon {
     display: block;
   }
-  /* Tambahkan CSS untuk menu-icon */
+
   .menu-icon {
     display: block;
-  }
+  }*/
   
   .top-wrapper h1 {
-    font-size: 24px;
-    line-height: 36px;
+   /* font-size: 24px;*/
+    line-height: 50px;
   }
   
   .top-wrapper p {
-    font-size: 14px;
-    line-height: 20px;
+    font-size: 20px;
+    line-height: 30px;
   }
+
 }
