--- a/responsive.css
+++ b/responsive.css
@@ -17,7 +17,7 @@
 /* Untuk Smartphone */
 @media all and (max-width: 680px) {
   
-  img.logo {
+  .logo {
     width: 50px;
     margin-top: 15px;
   }
