--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,7 +22,7 @@ a {
   margin: 0 auto;
 }
 
-.top-wrapper {
+.slide-wrapper {
   padding: 100px 0 100px 0;
   background-image: url("background_header.jpg");
   background-size: cover;
@@ -30,57 +30,9 @@ a {
   text-align: center;
 }
 
-.top-wrapper h1 {
-  opacity: 0.7;
-  font-size: 45px;
-  letter-spacing: 15px;
-  margin-bottom: 40px;
-}
 
-.top-wrapper p {
-  opacity: 0.7;
-  margin-bottom: 3px;
-}
 
-.btn-wrapper {
-  text-align: center;
-  margin: 50px 0;
-}
 
-.btn-wrapper p {
-  margin: 10px 0;
-}
-
-.signup {
-  background-color: red;
-  margin-right: 10px;
-}
-
-.facebook {
-  background-color: #3b5998;
-  margin-right: 10px;
-}
-
-.twitter {
-  background-color: green;
-}
-
-.btn {
-  padding: 12px 24px;
-  color: white;
-  display: inline-block;
-  opacity: 0.8;
-  border-radius: 4px;
-  text-align: center;
-}
-
-.btn:hover {
-  opacity: 1;
-}
-
-.fa {
-  margin-right: 5px;
-}
 
 header {
   height: 65px;
@@ -140,6 +92,7 @@ ul.topnav li.icon2 a:hover {
   background-color: rgba(255, 255, 255);
   color: rgba(34, 49, 52);      
   border: 1px solid rgb(34, 49, 52);
+  
 }
 
 /* Hide the list item that contains the link that should open and close the topnav on small screens */
@@ -174,18 +127,39 @@ ul.topnav li.icon {display: none;}
   padding: 21px 0;
   display: none;
 }*/
+/*---------------------------------------------------------------*/
+.profile-wrapper {
+  padding: 100px 0 100px 0;
+  background-image: url("background_header.jpg");
+  background-size: cover;
+  color: white;
+  text-align: center;
+}
 
+.profile-wrapper h1 {
+  /*opacity: 0.7;*/
+  font-size: 45px;
+  letter-spacing: 10px;
+  margin-bottom: 40px;
+}
 
-.lesson-wrapper {
+.profile-wrapper p {
+  opacity: 0.7;
+  margin-bottom: 3px;
+}
+
+/*---------------------------------------------------------------*/
+.gallery-wrapper {
   padding-top: 50px;
   padding-bottom: 50px;
   padding-left: 5%;
   padding-right: 5%;
   background-color: #e6ede8;
   text-align: center;
+
 }
 
-.lesson-wrapper .heading {
+.gallery-wrapper .heading {
   /*padding-top: 50px;*/
   padding-bottom: 50px;
   color: #5f5d60;
@@ -195,37 +169,73 @@ ul.topnav li.icon {display: none;}
   font-weight: normal;
 }
 
-.lesson {
-  float: left;
-  width: 25%;
+.gallerys {
+  width: 100%;
+
 }
 
-.lesson-icon {
+.gallery {
+  float: left;
+  width: 25%;
+  
+}
+
+.gallery-icon {
+  /*width: 250px;*/
+  height: 160px;
+  overflow: hidden;
+  border: 2px solid #666;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
   position: relative;
 }
 
-.lesson-icon img {
-  width: 250px  ;
+.gallery-icon img {
+  /*width: 250px  ;*/
 }
 
-.lesson-icon p {
+.gallery-icon span {
+  display: block;
+  width: 250px;
+  /*width: 100%;*/
+  /*height: 160px;*/
+  /*background-color: red;*/
   position: absolute;
-  top: 44%;
-  width: 100%;
+  /*top: 0;*/
+  top: 5%;
+  text-align: center;
+  line-height: 160px;
   color: white;
+  font-size: 20px;
+  opacity: 0;
+  transition: .5s;
+  transform: scale(0) rotate(0deg);
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
-.text-contents {
+.gallery-icon,
+.gallery-icon span,
+.gallery-icon img {
+  border-radius: 10px;
+}
+
+.gallery-icon a:hover span {
+  opacity: 1;
+  transform: scale(1) rotate(360deg);
+}
+
+/*.text-contents {
   width: 80%;
   display: inline-block;
   margin-top: 15px;
   font-size: 15px;
   color: black;
-}
+}*/
 
-.heading h3 {
+/*.heading h3 {
   font-weight: normal;
-}
+}*/
 
 .message-wrapper {
   border-bottom: 1px solid #eee;
@@ -247,10 +257,50 @@ ul.topnav li.icon {display: none;}
   box-shadow: 0 7px #1a7940;
 }*/
 
-.message:active {
+/*.message:active {
   position: relative;
   top: 7px;
   box-shadow: none;
+}*/
+
+.btn-wrapper {
+  text-align: center;
+  margin: 50px 0;
+}
+
+.btn-wrapper p {
+  margin: 10px 0;
+}
+
+.signup {
+  background-color: red;
+  margin-right: 10px;
+}
+
+.facebook {
+  background-color: #3b5998;
+  margin-right: 10px;
+}
+
+.twitter {
+  background-color: green;
+}
+
+.btn {
+  padding: 12px 24px;
+  color: white;
+  display: inline-block;
+  opacity: 0.8;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.btn:hover {
+  opacity: 1;
+}
+
+.fa {
+  margin-right: 5px;
 }
 
 footer img {
@@ -258,7 +308,7 @@ footer img {
 }
 
 footer {
-  background-color: rgba(34, 49, 52);
+  background-color: black;
 }
 
 footer p {
