--- a/responsive.css
+++ b/responsive.css
@@ -32,13 +32,95 @@
   }
   
   .gallerys {
-    margin-left: 20px;
+    margin-left: 40px;
   }
 
   .gallery {
     width: 100%;
 
   }
+  
+  /*overlay*/
+  .overlay {
+  width: 0;
+  height: 0;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0,0,0,0);
+  z-index: 9999;
+  transition: 0s;
+  text-align: center;
+  padding: 100px;
+}
+
+.overlay:target {
+
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0,0,0,0.7);
+}
+
+
+.overlay img {
+  /*max-height: 100%;*/
+  width: 100%;
+  box-shadow: 2px 2px 7px rgba(0,0,0,0.5);
+}
+
+.overlay:target img {
+  animation: zoomandfade 1s;
+}
+.close {
+  position: absolute;
+  margin-left: -10000px;
+}
+
+.overlay:target .close {
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  color: white;
+  text-decoration: none;
+  margin-left: -20px;
+  background-color: black;
+  border: 1px solid white;
+  line-height: 14px;
+  padding: 5px;
+}
+
+/* navigasi */
+.next, .prev {
+  position: absolute;
+  margin-left: -10000px;
+}
+
+.overlay:target .next {
+  width: 20%;
+  height: 20%;
+  /*background-image: url(image/next_but.png);
+  position: absolute;
+  text-indent: -9999px;*/
+  top: 25%;
+  margin-left: 10px;
+}
+
+.overlay:target .prev {
+  width: 20%;
+  height: 20%;
+  /*background-image: url(image/prev_but.png);
+  position: absolute;
+  text-indent: -9999px;*/
+  top: 25%;
+  margin-left: -110px;
+}
+
+
+  /*----------------------*/
+
 
   /*.gallery-wrapper {
     margin: auto;
